Integrating Next Step Changes
- article page complete
- loading more arcticles complete

--- a/project.properties
+++ b/project.properties
@@ -14,3 +14,4 @@
 target=android-18
 android.library.reference.1=..\\..\\Downloads\\Android-RSS-Reader-Library-master
 android.library.reference.2=..\\James_Workspace\\cardslib-master\\library\\src\\main
+android.library.reference.3=../../Downloads/cardslib-master/library-extra/src/main
