--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,8 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Ynott/Downloads/ion-1.3.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Ynott/Downloads/androidasync-1.3.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Ynott/Downloads/google-gson-2.2.4/gson-2.2.4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
