--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -11,11 +11,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher_hdpi"
+        android:icon="@drawable/lowkeyicon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".LowKeySplash"
+            android:name="com.lowkeygaming.app.LowKeySplash"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -25,7 +25,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".BlogPostListScreen"
+            android:name="com.lowkeygaming.app.BlogPostListScreen"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
+         <activity
+            android:name="com.lowkeygaming.app.ArticleScreen"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
